--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="/signup">Sign Up</a>
                 </li>
             </ul>
-            <a href="/addproduct">
+            <a href="/addProduct">
                 <button class="btn btn-dark ms-auto" type="button">Add Product</button>
             </a>
         </div>
