--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="signup-container">
             <h2 class="text-center">Sign Up</h2>
-            <form th:action="@{/signup}" method="post">
+            <form th:action="@{/signup}" method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" class="form-control" id="username" name="username" required>
